dragonboard-820c: Switch to use linux-firmware-qcom-{adreno-a530,venus-4.2}
Signed-off-by: Aníbal Limón <anibal.limon@linaro.org>

(Cherry-picked from commit 6d7bf0e2a1f9097d997b823fead70e972a5bf798)

--- a/conf/machine/dragonboard-820c.conf
+++ b/conf/machine/dragonboard-820c.conf
@@ -14,8 +14,9 @@ SERIAL_CONSOLE ?= "115200 ttyMSM0"
 MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS += " \
     firmware-qcom-dragonboard820c \
     kernel-modules \
-    ${@bb.utils.contains('DISTRO_FEATURES', 'opengl', 'mesa-driver-msm', '', d)} \
+    ${@bb.utils.contains('DISTRO_FEATURES', 'opengl', 'linux-firmware-qcom-adreno-a530 mesa-driver-msm', '', d)} \
     ${@bb.utils.contains('DISTRO_FEATURES', 'wifi', 'linux-firmware-ath10k', '', d)} \
+    linux-firmware-qcom-venus-4.2 \
 "
 
 QCOM_BOOTIMG_ROOTFS ?= "sda1"
