dragonboard-845c: Switch to use linux-firmware-{ath10k, qcom-{sdm845, adreno-a630}}
The bdwlan is needed to generate board-2.bin not useful alone, the same
for wlan parts that are now in linux-firmware-qcom-sdm845-modem.

Finally install a630_zap*.* firmware inside /lib/firmware/qcom the
remaining parts are now on linux-firmware-qcom-adreno-a630.

Signed-off-by: Aníbal Limón <anibal.limon@linaro.org>

(Cherry-picked from commit 07fceedf0c24f3953a29838c2a4b6255b0fdf6a7)

--- a/conf/machine/dragonboard-845c.conf
+++ b/conf/machine/dragonboard-845c.conf
@@ -14,8 +14,11 @@ SERIAL_CONSOLE ?= "115200 ttyMSM0"
 MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS += " \
     firmware-qcom-dragonboard845c \
     kernel-modules \
-    ${@bb.utils.contains('DISTRO_FEATURES', 'bluetooth', 'linux-firmware-qca', '', d)} \
-    ${@bb.utils.contains('DISTRO_FEATURES', 'opengl', 'mesa-driver-msm', '', d)} \
+    ${@bb.utils.contains('DISTRO_FEATURES', 'wifi', 'linux-firmware-ath10k linux-firmware-qcom-sdm845-modem', '', d)} \
+    ${@bb.utils.contains('DISTRO_FEATURES', 'bluetooth', 'linux-firmware-qca linux-firmware-qcom-sdm845-modem', '', d)} \
+    linux-firmware-qcom-sdm845-audio \
+    linux-firmware-qcom-sdm845-compute \
+    ${@bb.utils.contains('DISTRO_FEATURES', 'opengl', 'linux-firmware-qcom-adreno-a630 mesa-driver-msm', '', d)} \
 "
 
 # /dev/sda1 is 'rootfs' partition after installing the latest bootloader package from linaro
