Use venus 5.2 from linux-firmware for DB845c.
A fix was add on mainline to support linux-firmware binary,

https://git.linaro.org/landing-teams/working/qualcomm/kernel.git/commit/?h=release/qcomlt-5.7&id=21bb88052948b35bdce926f301f2ba7970040812

Signed-off-by: Aníbal Limón <anibal.limon@linaro.org>

(Cherry-picked from commit a7e813892860991a6ff012ecd4ac34cfdf6d3eac)

--- a/conf/machine/dragonboard-845c.conf
+++ b/conf/machine/dragonboard-845c.conf
@@ -19,6 +19,7 @@ MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS += " \
     linux-firmware-qcom-sdm845-audio \
     linux-firmware-qcom-sdm845-compute \
     ${@bb.utils.contains('DISTRO_FEATURES', 'opengl', 'linux-firmware-qcom-adreno-a630 mesa-driver-msm', '', d)} \
+    linux-firmware-qcom-venus-5.2 \
 "
 
 # /dev/sda1 is 'rootfs' partition after installing the latest bootloader package from linaro
